--- a/src/app/components/cajaPrecio/cajaPrecio.component.html
+++ b/src/app/components/cajaPrecio/cajaPrecio.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s12 tipo-precio">
-    Precio por noche por habitacion
+    Precio por noche por habitación
   </div>
   <div class="col s12 orange-text contenedor-precio">
     ARS<b>{{precio}}</b>
