--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,28 @@
 .almundo-body {
   background-color: #f4f4f4;
 }
+
+input.no-material:not([type]) {
+  border-bottom: 1px solid #9e9e9e;
+      outline: none;
+      height: 1.7rem;
+      font-size: 1rem;
+      box-shadow: none;
+      box-sizing: content-box;
+      transition: all 0.3s;
+      background-color: rgba(255,255,255,0.9);
+      width: 100%;
+      padding: 5px;
+      border: 1px solid #f2f2f2;
+      border-radius: 2px;
+      margin: 0px;
+}
+input.no-material:not([type]):focus:not([readonly]){
+      box-shadow: none;
+      box-sizing: content-box;
+      border: 1px solid #f2f2f2;
+      border-radius: 2px;
+}
+.no-mayusculas {
+     text-transform: none;
+}
