--- a/src/app/components/cajaPrecio/cajaPrecio.component.html
+++ b/src/app/components/cajaPrecio/cajaPrecio.component.html
@@ -6,6 +6,6 @@
     ARS<b>{{precio}}</b>
   </div>
   <div class="col s12 center-align">
-    <a class="btn indigo darken-4 no-mayusculas centrar"><b>Ver hotel</b></a>
+    <button class="btn indigo darken-4 no-mayusculas centrar"><b>Ver hotel</b></button>
   </div>
 </div>
