--- a/src/app/components/listaHoteles/listaHoteles.component.html
+++ b/src/app/components/listaHoteles/listaHoteles.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="col l2 s12 valign-wrapper borde-izquierdo-l borde-superior-s">
-        <caja-precio [precio]="hotel.price"></caja-precio>
+        <caja-precio class="col s12" [precio]="hotel.price"></caja-precio>
       </div>
       </div>
    </li>
