--- a/src/app/components/cajaFiltros/cajaFiltros.component.html
+++ b/src/app/components/cajaFiltros/cajaFiltros.component.html
@@ -6,19 +6,19 @@
   </collapsible-list-item>
   <collapsible-list-item class="filtros">
     <collapsible-header class="light-blue-text text-darken-1" (click)="toggleAbiertoFiltroNombre()">
-      <div class="col s11">
+      <div class="col s11 l10">
         <svg-icon src="/assets/icons/filters/search.svg" class="icon-collapsible-header"></svg-icon>
         <b>Nombre del Hotel</b>
       </div>
-      <div class="right-align col s1">
+      <div class="right-align col s1 l2">
         <i class="caret rotate" [class.open]="abiertoFiltroNombre"></i>
       </div>
     </collapsible-header>
     <collapsible-body class="white estirar-al-contenido separar-seccion sin-sombra" [expanded]="true">
-        <div class="col s8">
+        <div class="col l6 m10 s6 xl7">
           <input class="no-material" placeholder="Ingrese el nombre del hotel"/>
         </div>
-        <div class="col s4">
+        <div class="col l6 m2 s6 xl5">
           <a class="btn indigo darken-4 no-mayusculas">Aceptar</a>
         </div>
     </collapsible-body>
@@ -26,11 +26,11 @@
 
   <collapsible-list-item class="filtros">
     <collapsible-header class="light-blue-text text-darken-1" (click)="toggleAbiertoFiltroEstrella()">
-      <div class="col s11">
+    <div class="col s11 l10">
         <svg-icon src="/assets/icons/filters/star.svg" class="icon-collapsible-header"></svg-icon>
         <b>Estrellas</b>
       </div>
-      <div class="right-align col s1">
+      <div class="right-align col s1 l2">
         <i class="caret rotate" [class.open]="abiertoFiltroEstrella"></i>
       </div>
     </collapsible-header>
