--- a/src/app/components/main/app.component.html
+++ b/src/app/components/main/app.component.html
@@ -2,7 +2,7 @@
 <div>
   <nav>
     <div class="nav-wrapper blue darken-4">
-      <a href="#" class="brand-logo"><img class="almundo-logo" src="/assets/images/logo-almundo.svg"/></a>
+      <!--<a href="#" class="brand-logo"><img class="almundo-logo" src="/assets/images/logo-almundo.svg"/></a>-->
     </div>
   </nav>
 </div>
