--- a/src/app/components/listaHoteles/listaHoteles.component.html
+++ b/src/app/components/listaHoteles/listaHoteles.component.html
@@ -1,4 +1,9 @@
 <ul>
+  <div *ngIf="hoteles?.length>0; then templateListaHoteles else templateMensajeSinHoteles">
+ </div>
+ </ul>
+
+ <ng-template #templateListaHoteles>
    <li *ngFor="let hotel of hoteles" class="hotel-card">
      <div class="row row-lista-hoteles">
       <div class="col s12 l10">
@@ -13,16 +18,24 @@
                 <a><b>{{hotel.name}}</b></a>
           </div>
           <div class="col s12">
-              <star-meter [cantidadEstrellas]="hotel.stars"></star-meter>
+              <app-star-meter [cantidadEstrellas]="hotel.stars"></app-star-meter>
           </div>
           <div class="col s12 contenedor-amenities">
-              <caja-amenities [amenitiesList]="hotel.amenities"></caja-amenities>
+              <app-caja-amenities [amenitiesList]="hotel.amenities"></app-caja-amenities>
           </div>
         </div>
       </div>
       <div class="col l2 s12 valign-wrapper borde-izquierdo-l borde-superior-s">
-        <caja-precio class="col s12" [precio]="hotel.price"></caja-precio>
+        <app-caja-precio class="col s12" [precio]="hotel.price"></app-caja-precio>
       </div>
       </div>
    </li>
- </ul>
+ </ng-template>
+
+ <ng-template #templateMensajeSinHoteles>
+    <div id="card-alert" class="card yellow">
+       <div class="card-content black-text">
+          <p>No se encontraron hoteles</p>
+       </div>
+    </div>
+ </ng-template>
