--- a/src/app/components/listaHoteles/listaHoteles.component.html
+++ b/src/app/components/listaHoteles/listaHoteles.component.html
@@ -9,7 +9,7 @@
       <div class="col s12 l10">
         <div class="col l3 s12 contenedor-imagen">
           <div class="wrapper-imagenes">
-            <img class="responsive-img hotel-img" src="/assets/images/hotels/{{hotel.image}}" onerror='this.src="https://static.almundo.com/img/almundo-iso.png"'>
+            <img class="responsive-img hotel-img" src="/assets/images/hotels/{{hotel.image}}" onerror='this.src="/assets/images/isologo-almundo.png"'>
           </div>
         </div>
         <div class="col l7 s12">
