--- a/src/app/components/listaHoteles/listaHoteles.component.html
+++ b/src/app/components/listaHoteles/listaHoteles.component.html
@@ -8,7 +8,7 @@
      <div class="row row-lista-hoteles">
       <div class="col s12 l10">
         <div class="col l5 s12 contenedor-imagen">
-          <div class="wrapper-imagenes" [ngStyle]="{'background': 'url(http://localhost:8080/hotels/' + hotel.image + ') no-repeat,
+          <div class="wrapper-imagenes" [ngStyle]="{'background': 'url(' + baseUrlImagen + hotel.image + ') no-repeat,
            url(/assets/images/isologo-almundo.png) no-repeat', 'background-size': 'cover, auto', 'background-position': 'center'}">
           </div>
         </div>
